tests/snapshots/t1_invalid_bool.snap
---
source: tests/prov_machine.rs
---
program:   t1_invalid_bool.lu
verdict:   ub(mem.ub)
row:       §7/T1
clause:    [mem.ub]
what:      producing an invalid value of a restricted type in unsafe code
licenses:  O9: niche packing; match jump tables without default arms; UTF-8 fast paths without re-validation
message:   `7 as bool` produces a `bool` outside {0, 1}; the representation is restricted, which is what licenses niche packing and default-free jump tables
access:    `p[0] as bool`
tag from:  (no tag — a value-representation row)
tree:
