tests/snapshots/use_after_move_field.snap
---
source: tests/fault_snapshots.rs
---
program: use_after_move_field.lu
trap:    use-after-move
clause:  [mem.tier0.move.2]
rule:    UseAfterMove
message: `p.x.n` was moved out and is uninitialized here
at:      20:13 `p.x.n`
because: 18:17 `take p.x` — `p.x` moved here
